// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `
Object {
  "inProgress": false,
  "list": Array [],
}
`;

exports[`2- add to queue 1`] = `
Object {
  "inProgress": false,
  "list": Array [
    Object {
      "error": "",
      "id": "document.pdf-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
    Object {
      "error": "",
      "id": "sheet.xls-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
  ],
}
`;

exports[`3- add to queue 1`] = `
Object {
  "inProgress": false,
  "list": Array [
    Object {
      "error": "",
      "id": "image.jpg-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
    Object {
      "error": "",
      "id": "document.pdf-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
    Object {
      "error": "",
      "id": "sheet.xls-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
  ],
}
`;

exports[`4- delete item from queue 1`] = `
Object {
  "inProgress": false,
  "list": Array [
    Object {
      "error": "",
      "id": "image.jpg-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
    Object {
      "error": "",
      "id": "document.pdf-10-1589567882559",
      "obj": File {},
      "progress": 0,
      "status": 1,
      "url": "",
    },
  ],
}
`;
